tests/parser/bad/type_t-cid-with.scilla
scilla_version 0

contract Test
()

field something : Uint128 with
